--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Special Birthday Card</title>
+    <title>A Special Boyfriend's Day Card</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
@@ -11,41 +11,46 @@
         
         <section class="card-page title-page">
             <div class="wax-seal"></div>
-            <h1>Happy Birthday<br>Sayang</h1>
-            <p class="date">27.09.2025</p>
-            <div class="doodle-graphic"></div> </section>
+            <h1>Happy Boyfriend's Day<br>Yash</h1>
+            <p class="date">30.07.2026 (You can change this date)</p>
+            <div class="doodle-graphic"></div> 
+        </section>
 
         <section class="card-page letter-page">
-            <div class="header-line">Dear Muza,</div>
+            <div class="header-line">Dear Yash,</div>
             <p class="body-text">
-                Today is your special day, but honestly, every day with you already feels special. You have this incredible way of making every moment feel brighter, and I’m beyond grateful for the love, joy, and warmth you bring into my life. 
+                How lucky am I to have you? You are the most **precious and special** person in my life. Every day spent with you is a gift that makes my heart feel full.
             </p>
             <p class="body-text">
-                I hope this year brings you everything you’ve dreamed of and more. Here’s to many more beautiful moments we’ll share. I love you more than you'll ever know!
+                You make me laugh until I cry, you bring out my **childish and carefree** side, and you are my safe place. You are kind, handsome, and truly the best partner a person could ask for. Thank you for being all the good things in my world.
             </p>
             <p class="signature">- Always Yours</p>
         </section>
 
         <section class="card-page invitation-page">
-            <div class="header-line">YOU'RE INVITED TO THE 24TH BIRTHDAY</div>
+            <div class="header-line">FLOWERS FOR MY LOVE</div>
             <p class="event-details">
-                Saturday, 27th September, 08:00 AM at Tents Eco Park
+                These flowers represent my feelings for you: <br>
+                **Red Roses:** For our deep, passionate love.<br>
+                **White Lilies:** For the sincerity and purity of our bond.<br>
+                **Sunflowers:** For the sheer happiness and joy you bring me every single day.
             </p>
+            <p class="reminder">Their beauty is a small reflection of your own amazing heart.</p>
         </section>
 
         <section class="card-page rsvp-page">
-            <div class="header-line date-question">WILL YOU BE MY DATE?</div>
+            <div class="header-line date-question">WILL YOU BE MY DATE TOMORROW?</div>
             <div class="checkbox-container">
                 <span class="checkbox checked-box">✓</span> YES
                 <span class="checkbox"></span> NO
             </div>
-            <p class="reminder">For Today's Special</p>
+            <p class="reminder">For a very special day with you.</p>
         </section>
 
         <section class="card-page hint-page">
             <div class="header-line">DON'T FORGET THE DRESS CODE IS...</div>
-            <h2 class="dress-code">"Blue!!!"</h2>
-            <p class="see-you">SEE YOU!!!</p>
+            <h2 class="dress-code">"Black"</h2>
+            <p class="see-you">❤️❤️❤️❤️❤️❤️<br>Kisses & Hugs!</p>
         </section>
 
     </div>
