--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <section class="card-page title-page">
             <div class="wax-seal"></div>
             <h1>Happy Boyfriend's Day<br>Yash</h1>
-            <p class="date">30.07.2026 (You can change this date)</p>
+            <p class="date">03-10-2025</p>
             <div class="doodle-graphic"></div> 
         </section>
 
         <section class="card-page letter-page">
-            <div class="header-line">Dear Yash,</div>
+            <div class="header-line">Dear Yash Mera poluuu pieee,</div>
             <p class="body-text">
                 How lucky am I to have you? You are the most **precious and special** person in my life. Every day spent with you is a gift that makes my heart feel full.
             </p>
