--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <section class="card-page title-page">
             <div class="wax-seal"></div>
-            <h1>Happy Boyfriend's Day<br>Yash</h1>
+            <h1>Happy Boyfriend's Day<br>Mera kaaaaduuuuuuuuuuuu</h1>
             <p class="date">03-10-2025</p>
             <div class="doodle-graphic"></div> 
         </section>
